<resources>
    <string name="app_name">GameBacklog</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_game">AddGame</string>
    <!-- Main activity -->
    <!-- Add activity -->
    <string name="title_hint">Title</string>
    <string name="platform_hint">Platform</string>
    <string name="day_hint">Day</string>
    <string name="month_hint">Month</string>
    <string name="year_hint">Year</string>
    <!-- Custom layout -->
    <!-- Errors -->
    <string name="title_error">Please fill in a title</string>
    <string name="platform_error">Please fill in a platform</string>
    <string name="date_error">Please fill in a valid date</string>
</resources>
